--- a/ex01-css/index.html
+++ b/ex01-css/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
         <h1>bold.</h1>
-        <h2 id="subtitulo">THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG.</h2>
+        <h2 id="subtitulo">The quick brown foxs jumps over the lazy dog.</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor nulla a interdum luctus. Pellentesque eget enim a est rhoncus efficitur. Suspendisse in libero non lacus laoreet gravida vitae et lacus. Sed at erat quis sapien sollicitudin dignissim. Nunc orci mi, vehicula eu libero id, pellentesque porta nunc. Pellentesque mi turpis, molestie ut dapibus eget, ultrices quis elit. Vestibulum nulla ligula, porta nec suscipit id, commodo ac felis. Curabitur augue neque, condimentum sed urna imperdiet, feugiat luctus purus.</p>
       </div>
       
